tests/errors/type_check/build/env_build_duplicate_struct.err.expected
error: at 3:16: [TC-DuplicateDeclaration] Duplicate declaration of type 'P'
   |
 3 |         struct P { y: i64 }
   |                ^
